# src/modules/users/entities/user.entity.ts
@@ -1,5 +1,6 @@
 import { randomUUID } from "crypto"
 import { ParameterRequiredError } from "../../../errors/parameter-required.error"
+import { PasswordBcrypt } from "../../../infra/shared/crypto/password.bcrypt"
 
 type IUser = {
   name: string
@@ -19,14 +20,22 @@ export class User {
     }
 
     this.name = props.name
-    this.username = props.username
     this.password = props.password
+    this.username = props.username
     this.id = randomUUID()
     this.isAdmin = false
   }
 
-  static create(props: IUser) {
-    const user = new User(props);
-    return user;
+  static async create(props: IUser) {
+    if (!props.username || !props.password) {
+      throw new ParameterRequiredError("Username/password is required.", 422)
+    }
+
+    const bcrypt = new PasswordBcrypt();
+    const passwordHashed = await bcrypt.hash(props.password)
+    props.password = passwordHashed
+
+    const user = new User(props)
+    return user
   }
 }
