# swagger.json
@@ -59,6 +59,27 @@
           }
         }
       }
+    },
+    "/doctors":{
+      "post":{
+        "description": "Cadastro de um médico",
+        "tags": ["doctors"],
+        "requestBody":{
+          "application/json":{
+            "schema":{
+              "$ref":"#/components/schemas/DoctorRequest"
+            }
+          }
+        }
+       },
+       "responses":{
+        "200":{
+          "description":" Médico criado com sucesso "
+        },
+        "400":{
+          "description": " Erro de cadastro "
+        }
+      }
     }     
   },
   "components":{
@@ -116,6 +137,42 @@
             "type":"string",
             "description": "password de login",
             "example":"password_test"
+          }
+        }
+      },
+      "DoctorRequest":{
+        "type":"object",
+        "properties": {
+          "crm":{
+            "type": "string",
+            "description":"CRM do médico",
+            "example": "123456",
+            "length": 6
+          },
+          "email":{
+          "type": "string",
+            "description":"Email do médico",
+            "example": "email@email,com.br"
+        },   
+            "username": {
+            "type": "string",
+            "description":"Username do médico",
+            "example": "username"
+          },
+          "password": {
+            "type": "string",
+            "description":"senha do médico",
+            "example": "password"
+          },
+          "name": {
+            "type": "string",
+            "description":"Nome do médico",
+            "example": "username"
+          },
+          "specialityId": {
+            "type": "string",
+            "description":"Especialidade do médico",
+            "format":"uuid"
           }
         }
       }
